# bot-atul

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/ideas/: atul-weekday-ritual.md
docs/superpowers/plans/: 2026-07-16-telegram-issue-bot-implementation.md
docs/superpowers/specs/: 2026-07-16-dashboard-agent-dm-ticket-workflow-design.md  2026-07-16-interactive-service-management-design.md  2026-07-16-telegram-issue-bot-design.md
src/bot_atul/: __init__.py  app.py  config.py
src/bot_atul/db/: connection.py  migrations.py  repositories.py
src/bot_atul/domain/: __init__.py  permissions.py  statuses.py
src/bot_atul/services/: dashboard.py  exports.py  relay.py  reminders.py  tickets.py  topics.py  workflow.py
src/bot_atul/telegram/: __init__.py  commands.py  formatting.py  keyboards.py  menu.py
src/bot_atul/telegram/handlers/: admin.py  dashboard.py  intake.py  menu.py  relay.py  tickets.py
tests/integration/: test_admin_handlers.py  test_relay_rules.py  test_repositories.py  test_ticket_actions.py  test_ticket_views.py  test_topic_creation.py  test_user_directory.py
tests/unit/: test_config.py  test_dashboard.py  test_exports.py  test_formatting.py  test_intake.py  test_menu.py  test_migrations.py  test_permissions.py  test_reminders.py  test_statuses.py
